<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.infiniteautomation</groupId>
	<artifactId>bacnet4j</artifactId>
	<version>${revision}</version>
	<name>BACnet4j Library</name>
	<description>BACnet specification implementation in Java supporting IPv4, IPv6, and MS/TP.  This library supports protocol Version 1 Revision 19.</description>
	<url>https://github.com/infiniteautomation/BACnet4J</url>
	<licenses>
		<license>
			<name>GNU General Public License 3.0</name>
			<url>https://raw.githubusercontent.com/infiniteautomation/BACnet4J/master/license.txt</url>
		</license>
	</licenses>
	<organization>
		<name>Infinite Automation Systems, Inc.</name>
		<url>https://www.infiniteautomation.com/</url>
	</organization>
	<properties>
		<revision>7.0.0-SNAPSHOT</revision>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<additionalDeploymentRepositoryId>additional-deployment-repository</additionalDeploymentRepositoryId>
		<maven.compiler.release>17</maven.compiler.release>
	</properties>
	<build>
		<sourceDirectory>src/main/java</sourceDirectory>
		<testSourceDirectory>src/test/java</testSourceDirectory>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-site-plugin</artifactId>
					<version>3.8.2</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>2.22.2</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-deploy-plugin</artifactId>
					<version>3.1.3</version>
				</plugin>
			</plugins>
		</pluginManagement>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.13.0</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.3.1</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-site-plugin</artifactId>
				<version>3.21.0</version>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>flatten-maven-plugin</artifactId>
				<version>1.6.0</version>
				<configuration>
					<updatePomFile>true</updatePomFile>
					<flattenMode>resolveCiFriendliesOnly</flattenMode>
					<outputDirectory>${project.build.directory}</outputDirectory>
				</configuration>
				<executions>
					<execution>
						<id>flatten</id>
						<phase>process-resources</phase>
						<goals>
							<goal>flatten</goal>
						</goals>
					</execution>
					<execution>
						<id>flatten.clean</id>
						<phase>clean</phase>
						<goals>
							<goal>clean</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
	<dependencies>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.5</version>
		</dependency>

		<dependency>
			<groupId>io.github.java-native</groupId>
			<artifactId>jssc</artifactId>
			<version>2.9.2</version>
		</dependency>

		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>1.8.0-beta4</version>
		</dependency>

		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.1</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<version>3.0.0</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-simple</artifactId>
			<version>1.8.0-beta4</version>
			<scope>test</scope>
		</dependency>

	</dependencies>
	<issueManagement>
		<url>https://github.com/infiniteautomation/BACnet4J/issues</url>
		<system>github</system>
	</issueManagement>
	<scm>
		<url>https://github.com/infiniteautomation/BACnet4J</url>
		<connection>scm:git:https://github.com/infiniteautomation/BACnet4J.git</connection>
		<developerConnection>scm:git:[push=]https://github.com/infiniteautomation/BACnet4J.git[fetch=]https://github.com/infiniteautomation/BACnet4J.git</developerConnection>
		<tag>HEAD</tag>
	</scm>
	<distributionManagement>
		<snapshotRepository>
			<id>ias-snapshots</id>
			<url>https://maven.mangoautomation.net/repository/ias-snapshot/</url>
		</snapshotRepository>
		<repository>
			<id>ias-releases</id>
			<url>https://maven.mangoautomation.net/repository/ias-release/</url>
		</repository>
	</distributionManagement>
	<repositories>
		<repository>
			<releases>
				<enabled>false</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
			<id>ias-snapshots</id>
			<url>https://maven.mangoautomation.net/repository/ias-snapshot/</url>
		</repository>
		<repository>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
			<id>ias-releases</id>
			<url>https://maven.mangoautomation.net/repository/ias-release/</url>
		</repository>
	</repositories>
	<profiles>
		<profile>
			<id>additional-deployment-repository</id>
			<activation>
				<property>
					<name>additionalDeploymentRepositoryUrl</name>
				</property>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-deploy-plugin</artifactId>
						<executions>
							<execution>
								<id>additional-deployment-repository</id>
								<goals>
									<goal>deploy</goal>
								</goals>
								<configuration>
									<altDeploymentRepository>${additionalDeploymentRepositoryId}::${additionalDeploymentRepositoryUrl}</altDeploymentRepository>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
</project>
